--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3 {
 
 a {
     color: #3cb371; /* Средний морской зеленый */
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 a:hover {
